# Spark

./: .gitignore
src/config/: config.h  filesystem.h
src/datatype/: LineOfResponse.cu  LineOfResponse.h  image.cpp  image.cu  image.h  listmode.cu  listmode.h  listmode_.h
src/functions/: BackProject.cu  BackProject.h  BackProjector.cu  BackProjector.h  OSEM.cu  OSEM.h  Projector.cu  Projector.h
src/geometry/: Lut.h  Pitech20Panel.h  PitechCylinder.h  affine.h  shape.h
src/helpers/: CMakeLists.txt  cuda_safe_call.h  library.cuh  random_generator.h  timer.h  tqdm.h
src/include/: CMakeLists.txt  arithmetic.h  basic_types.h  common.h  comparison.h  constants.h  counter.h  csv_io.h  functor.h  geometric.h  h4data_io.h  h5data_io.h  random_generator.h  rawdata_io.h  reduce.h  reducer.h  summation.h
tests/arthmetic/: main.cu
tests/test1/: main.cu
tests/test2/: CMakeLists.txt  main.cu
tests/test_bp/: CMakeLists.txt  main.cu
tests/test_geometry/: CMakeLists.txt  main.cu
tests/test_listmode/: main.cu
tests/test_load_pos/: CMakeLists.txt  main.cu
tests/test_lor/: CMakeLists.txt  main.cu
tests/test_pass_pointer/: CMakeLists.txt  main.cu
tests/test_random/: main.cu
tests/test_reducer/: main.cu
